--- a/area/app/src/main/res/layout/activity_main.xml
+++ b/area/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp" />
 
+        <TextView
+            android:id="@+id/onChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/result"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 </RelativeLayout>
