--- a/ej4/app/src/main/res/layout/activity_main.xml
+++ b/ej4/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,10 @@
             android:layout_marginTop="20sp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:text="@string/consumo" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/consumo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -30,9 +30,8 @@
             android:ems="10"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="Name" />
+            android:inputType="number"
+            android:minHeight="48dp" />
 
         <TextView
             android:id="@+id/textView2"
@@ -42,10 +41,10 @@
             android:layout_marginTop="20sp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:text="@string/distancia" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/distancia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -53,9 +52,8 @@
             android:ems="10"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="Name" />
+            android:inputType="number"
+            android:minHeight="48dp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -65,29 +63,16 @@
             android:layout_marginTop="20sp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:text="@string/via" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/s1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20sp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal" />
-
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20sp"
-            android:ems="10"
-            android:foregroundGravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="Name" />
 
         <TextView
             android:id="@+id/textView4"
@@ -97,10 +82,10 @@
             android:layout_marginTop="20sp"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:text="TextView" />
+            android:text="@string/tiempo" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/tiempo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -108,9 +93,40 @@
             android:ems="10"
             android:foregroundGravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="Name" />
+            android:inputType="number"
+            android:minHeight="48dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/tiempo_empleado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_weight="1"
+                android:text="@string/calcTiempo" />
+
+            <Button
+                android:id="@+id/consumo_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:layout_weight="1"
+                android:text="@string/consumoTotal" />
+        </LinearLayout>
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/res"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_marginTop="500sp"
+        android:text="@string/res"
+        android:textSize="30sp" />
 
 </RelativeLayout>
